[package]
name = "ferrisetw"
version = "0.1.1"
license = "MIT OR Apache-2.0"
description = "Basically a KrabsETW rip-off written in Rust"
authors = ["n4r1b"]
edition = "2018"
repository = "https://github.com/n4r1b/ferrisetw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = "0.9.1"
com = "0.4.0"
memoffset = "0.6"
rand = "~0.8.0"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "1.2.1"
# thiserror = "~1.0"
# anyhow = "~1.0"

[build-dependencies]
windows_macros = "0.9.1"

[lib]
doctest = false