[package]
name = "ferrisetw"
version = "1.1.0"
license = "MIT OR Apache-2.0"
description = "Basically a KrabsETW rip-off written in Rust"
keywords = ["etw", "krabsetw", "event", "tracing", "windows"]
categories = ["api-bindings", "parsing"]
authors = ["n4r1b", "daladim"]
edition = "2018"
repository = "https://github.com/n4r1b/ferrisetw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enable the conversion of timestamps to time::OffsetDateTime
time_rs = ["time"]
serde = [ "dep:serde", "time?/serde", "time?/serde-human-readable" ]

[dependencies]
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security_Authorization",
    "Win32_System_Diagnostics_Etw",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_System_Time",
]}
com = "0.6.0"
memoffset = "0.9"
rand = "~0.8.0"
once_cell = "1.14"
num = "0.4"
num-traits = "0.2"
num-derive = "0.3"
bitflags = "2.4.0"
widestring = "1.0"
zerocopy = "0.6"
time = { version = "0.3", features = ["large-dates"], optional = true }
serde = { version = "1.0", optional = true }
# thiserror = "~1.0"
# anyhow = "~1.0"
log = "0.4"

[dev-dependencies]
env_logger = "0.10" # used in examples
serde_json = "1.0"
flexbuffers = "2.0"
